# otusalg-hw03

./: CMakeLists.txt  README.md  app.cpp  e.cpp  e.hpp  hw3-lib.hpp  main.cpp  otusalg-hw03.pro  p3.cpp  primesieve.cpp  test-base.cpp
cmake/: FindGMP.cmake
src/: CMakeLists.txt  fibo.cpp  pow.cpp  pow.hpp  sieve.cpp
test/: CMakeLists.txt  tests.cpp
